--- a/alunos.html
+++ b/alunos.html
@@ -40,7 +40,7 @@
     <br>
 </div>
 <div class="caixadopedro">
-    <div class="imagempedro"> <img width="400" height="400" src="img/foto-pedro2.jpg"></div>
+    <div class="imagempedro"> <img width="400" height="400" src="img/foto-pedro.jpg"></div>
     <div class="apresentação_pedro">
         <div class="dadospedro"> Pedro Alexandre Custódio Silva RA: 22.123.049-3 pecustodio030703@gmail.com</div>
         <div class="infopedro">Atualmente sou estagiário da Siemens DISW e esse é meu primeiro projeto de computação da faculdade, gosto muito de música, meu artista favorito é o Joji, filmes, meu filme favorito é guardiões da galáxia 3, pesquisar sobre tecnologia e viajar, o lugar mais legal que eu fui é Buenos Aires</div>
