--- a/home.html
+++ b/home.html
@@ -41,8 +41,8 @@
         <div class="fundotexto">
             <div class="texto">
                 <p>&emsp;O objetivo do WingIt! é guiar um patinho através do máximo de obstáculos possível, desviando deles e evitando que o pato caia no chão.</p>
-                <p>&emsp; isso acontecer, a pontuação é definida para 0 e o jogo reinicia. A pontuação do jogador aumenta de acordo com o tempo que ele consegue sobreviver.</p>
-                <p>&emsp; pato é controlado clicando na tela do jogo, o que faz o pular, e se o jogador não clicar na tela, o pássaro cai de acordo com a gravidade.</p>
+                <p>&emsp;Se isso acontecer, a pontuação é definida para 0 e o jogo reinicia. A pontuação do jogador aumenta de acordo com o tempo que ele consegue sobreviver.</p>
+                <p>&emsp;O pato é controlado clicando na tela do jogo, o que faz o pular, e se o jogador não clicar na tela, o pássaro cai de acordo com a gravidade.</p>
                 <p>&emsp; WingIt! tem uma jogabilidade bastante intuitiva e simples, mas consegue, ao mesmo tempo, ser um jogo desafiador devido ao mecanismo de controle preciso e obstáculos gerados aleatoriamente, que andam rapidamente na direção do jogador.</p>
             </div>
         </div>
