--- a/jogo.html
+++ b/jogo.html
@@ -28,10 +28,12 @@
 <br>
 <br>
 <br>
-<div id="jogo">
+<br>
+<div id="jogo" onclick="clicou()">
     <p id="tutorial">CLIQUE NO JOGO PARA PULAR</p>
-    <canvas onclick="clicou()" id="canvas" width="1000" height="600"></canvas>
+    <canvas onclick="clicou()" id="canvas" width="900" height="540"></canvas>
 </div>
+<button id="botIniciar" type="button" class="botIniciar" onclick="jogo()">Iniciar!</button>
 </body>
 <script src="jogo.js"></script>
 </html>
